feat: add buckets list
