# internal/controllers/presenters/bucket.go
@@ -1,5 +1,7 @@
 package presenters
 
+import "github.com/shopspring/decimal"
+
 type CreateBucketReq struct {
 	Name     string `json:"name" example:"A"`
 	Capacity int    `json:"capacity" example:"10"`
@@ -12,4 +14,17 @@ type BucketRes struct {
 
 	Name     string `json:"name" example:"A"`
 	Capacity int    `json:"capacity" example:"10"`
+}
+
+type BucketFruitsRes struct {
+	ID          int64           `json:"id" example:"1"`
+	Name        string          `json:"name" example:"A"`
+	Capacity    int             `json:"capacity" example:"10"`
+	TotalFruits int64           `json:"total_fruit" example:"5"`
+	TotalPrice  decimal.Decimal `json:"total_price" example:"23.54"`
+	Percent     string          `json:"percent" example:"50%"`
+}
+
+type BucketsFruitsRes struct {
+	Data []BucketFruitsRes `json:"data"`
 }
